--- a/FlipBookMacTest/Info.plist
+++ b/FlipBookMacTest/Info.plist
@@ -26,6 +26,10 @@
 	<string>Copyright © 2020 Brad Gayman. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Add photos to photo library</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Add photos to photo library</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>NSSupportsAutomaticTermination</key>
